Maps - fix cluster marker number alignment, fix pr comments

--- a/src/assets/scss/text-selection.scss
+++ b/src/assets/scss/text-selection.scss
@@ -155,5 +155,21 @@
                 background: rgb(108, 108, 108, 0.2) !important;
             }
         }
+
+        &-grey {
+            color: $bw5;
+
+            .address-text,
+            .marker-bold-text {
+                &::-moz-selection {
+                    color: $bw5;
+                    background: rgba(145, 145, 145, 0.2);
+                }
+                &::selection {
+                    color: $bw5;
+                    background: rgba(145, 145, 145, 0.2);
+                }
+            }
+        }
     }
 }
